
Fixed the pixilating problem. Im not using mipmaps cause i dont feel like
spending the time. deal with it. :P I am seperating out the specular light
so we get nice lighting and material properties with the texture. Yeah. The
effect fails with Invalid value to GLX_lightmodel_size on my box when running
in GLX hardware. It runs fine and looks nice in software MESA. I'm gonna
spend some time tracking down the glx bug. Not much else to do in this epplet,
It pretty much demos all the stuff i wanted to show. Go out and build
3D spinning load meters and stuff now!

-------------------------------------------------------------------------------

Fri Jan 28 15:29:32 EST 2000
(Christian)

Updated docs for E-Mountbox.

-------------------------------------------------------------------------------

Mon Jan 31 11:22:44 EST 2000
(Christian)

Put the cursor where it should be when clicking in a textbox.

-------------------------------------------------------------------------------

Mon Jan 31 17:51:43 EST 2000
(Christian)

E-Mixer didn't cleanup.

-------------------------------------------------------------------------------

Tue Feb  1 12:26:41 PST 2000
(KainX)

Patches and an icon from Jerome De Greef <jerome_degreef@hotmail.com>.

-------------------------------------------------------------------------------

Wed Feb  2 13:53:44 EST 2000
(Christian)

"Eject" support for E-Mountbox.

-------------------------------------------------------------------------------

Sat Feb  5 03:20:49 GMT 2000
(gilbertt)

Preliminary wheelmouse support for sliders.

-------------------------------------------------------------------------------

Wed Feb 16 11:18:58 EST 2000
(Christian)

Added a timer to E-Mountbox that keeps the display up to date.

-------------------------------------------------------------------------------

Sun Feb 27 13:05:15 GMT 2000
(gilbertt)

Epplet-side fix for the "millions of remember requests" bug.
I'll implement a better fix when I add a new ipc call to e :)
