@@ -545,7 +545,7 @@ Epplet_Init(char *name,
 
    wmDeleteWindow = XInternAtom(disp, "WM_DELETE_WINDOW", False);
 
-   Epplet_timer (remember_stuff, NULL, 20, "REMEMBER_TIMER");
+   Epplet_timer (remember_stuff, NULL, 10, "REMEMBER_TIMER");
    
    sa.sa_handler = Epplet_handle_child;
    sa.sa_flags = SA_RESTART;
@@ -887,7 +887,7 @@ static void remember_stuff(void *data)
     if(need_remember)                    
 	  Epplet_remember(); 
     need_remember = 0;
-    Epplet_timer (remember_stuff, NULL, 20, "REMEMBER_TIMER");
+    Epplet_timer (remember_stuff, NULL, 10, "REMEMBER_TIMER");
 }
 
 void
@@ -963,8 +963,18 @@ Epplet_show(void)
 void
 Epplet_remember(void)
 {
-   char                s[1024];
+    char                s[1024];
 
+#ifdef NEW_REMEMBER
+#ifndef NO_AUTO_RESPAWN
+    char                commandbuf[] = "command";
+#else
+    char                commandbuf[] = "";
+#endif
+   Esnprintf(s, sizeof(s), "remember %x none layer border location " 
+	   "sticky shade group %s", (unsigned int)mainwin->win, commandbuf);
+   ECommsSend(s);
+#else
    Esnprintf(s, sizeof(s), "remember %x none", (unsigned int)mainwin->win);
    ECommsSend(s);
    Esnprintf(s, sizeof(s), "remember %x layer", (unsigned int)mainwin->win);
@@ -982,6 +992,7 @@ Epplet_remember(void)
 #ifndef NO_AUTO_RESPAWN
    Esnprintf(s, sizeof(s), "remember %x command", (unsigned int)mainwin->win);
    ECommsSend(s);
+#endif
 #endif
 }
 
