@@ -247,6 +247,18 @@ if test ! -z "$no_respawn"; then
 AC_DEFINE(NO_AUTO_RESPAWN)
 fi
 
+AC_ARG_ENABLE(new-remember,
+[  --enable-new-remember   use if you have a version of enlightenment >= 0.16.4],
+            if test "$enableval" = "yes"; then
+               AC_MSG_RESULT(yes)
+	       AC_DEFINE(NEW_REMEMBER)
+	       else
+	       AC_MSG_RESULT(no)
+	       fi,
+	       AC_MSG_RESULT(no)
+)
+
+
 AC_MSG_CHECKING(for Enlightenment location)
 if test ! -z "$EROOT"; then
   AC_SUBST(EROOT)
